--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,32 @@
+[build-system]
+requires = ["flit_core>=3.4"]
+build-backend = "flit_core.buildapi"
+
 [project]
-name = 'quickdriver'
-version = '0.1'
+name = "quickdriver"
+version = "1.0.0"
 dependencies = [
-    'pandas >= 2.2.3',
-    'selenium >= 4.27.1',
-    'tqdm >= 4.67.1',
-    'pyarrow >= 16.1.0',
+    "selenium >= 4.27.1",
+    "pandas >= 2.2.3",
+    "tqdm >= 4.67.1",
+    "pyarrow >= 16.1.0",
 ]
+requires-python = ">=3.8"
+authors = [
+    {name = "nishizawatakamasa"}
+]
+description = "A wrapper for Selenium WebDriver that simplifies browser automation."
+readme = "README.md"
+license = "MIT"
+license-files = ["LICEN[CS]E.*"]
+keywords = [
+    "selenium"
+]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
+
+[project.urls]
+repository = "https://github.com/nishizawatakamasa/quickdriver"
