--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "quickdriver"
-version = "1.0.0"
+version = "1.0.1"
 dependencies = [
     "selenium >= 4.27.1",
     "pandas >= 2.2.3",
@@ -13,7 +13,7 @@ dependencies = [
 ]
 requires-python = ">=3.8"
 authors = [
-    {name = "nishizawatakamasa"}
+    {name = "nishizawatakamasa", email = "nszw0502@gmail.com"}
 ]
 description = "A wrapper for Selenium WebDriver that simplifies browser automation."
 readme = "README.md"
